# slog

./: .gitignore  README.md  example.c  format.sh  meson.build  slog.h
tests/: README.md  meson.build  test_memory.c  test_nodes.c  test_output.c  test_type.c
